feat: Ajustes de classe de login
